# cybuddy

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  demo.sh  package-lock.json  pyproject.toml  requirements.txt  test_output.txt
.github/workflows/: ci.yml  publish.yml
docs/: config.md  getting-started.md
docs/stories/v1-sprint1/: V1-S1-005-attack-techniques.md
docs/stories/v1-sprint2/: SPRINT-PLAN.md  V1-S2-001-auto-detect-mode.md  V1-S2-002-remove-config.md  V1-S2-003-syntax-highlighting.md  V1-S2-004-smart-errors.md  V1-S2-005-command-history.md  V1-S2-006-natural-language-chat.md  V1-S2-007-byok-ai-integration.md
scripts/: release.py  run_secbuddy.sh  setup-deployment.sh
src/cybuddy/: __init__.py  cli.py  config.py  data.py  engine.py  errors.py  formatters.py  handlers.py  history.py  interactive_cli.py  mockup_data.py  nl_parser.py  simple_cli.py  simple_tui.py  suggestions.py  terminal_detection.py  tui.py
src/cybuddy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cybuddy/ai/: __init__.py  prompts.py  provider.py
src/cybuddy/commands/: __init__.py  history.py
src/cybuddy/tui/: __init__.py  app.py  (+1 more)
src/secbuddy/: __init__.py  cli.py  engine.py  errors.py  handlers.py  mockup_data.py  simple_cli.py  simple_tui.py  simple_tui_fixed.py  suggestions.py
src/secbuddy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stories/: README.md
tests/: test_nl_parser.py
tests/secbuddy/: test_cli.py
tests/tui/: test_app.py  test_history.py  test_pager.py  test_simple_tui.py
(+17 files in other folders)
