[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybuddy"
version = "0.1.0"
description = "A beginner-friendly cybersecurity helper CLI with Codex-like UX"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{ name = "Your Name" }]
dependencies = [
  "prompt-toolkit>=3.0",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.6.9",
  "mypy>=1.11",
  "types-setuptools",
]

[project.scripts]
cybuddy = "secbuddy.cli:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","UP","B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
